infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: 4a016dc527a64aa6878705b0c2b7055eeebe7142f4e467544452b665964dd054/auth:latest
          ports:
            - containerPort: 3000
